@@ -131,6 +131,7 @@ If you get stuck, you can ask for help in the Plugin Forum.
 = 6.x.x - 2022-xx-xx =
 * Fix - Fixed capitalization for payment method names: iDEAL, giropay, and Sofort.
 * Add - Text to explain how to enable webhooks when manually entering your API keys in the new Stripe settings.
+* Tweak - Use the newly exposed LoadableMask component provided by WooCommerce Blocks to trigger the loading state for Payment Request Buttons.
 * Tweak - Redirect to the settings tab after an account is connected
 * Tweak - Prompt message when navigating out Stripe settings with unsaved changes
 * Tweak - Show toast when payment methods list is updated with new payment methods.
