@@ -6,6 +6,7 @@
 * Tweak - Redirect to the settings tab after an account is connected.
 * Tweak - Prompt message when navigating out Stripe settings with unsaved changes
 * Tweak - Show toast when payment methods list is updated with new payment methods.
+* Tweak - Use the newly exposed LoadableMask component provided by WooCommerce Blocks to trigger the loading state for Payment Request Buttons.
 * Fix - JS error on checkout when Boleto method was not active.
 * Fix - Fixed bug that show "Use new payment method" on pay order page when there were no saved card was.
 * Tweak - Autocomplete for account keys and webhooks fields were disabled.
